cmake_minimum_required(VERSION 3.10)
project(fg_3d)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")


set(SDL_SHARED ON CACHE BOOL "Build shared lib")
set(SDL_STATIC OFF CACHE BOOL "Disable static lib")

add_subdirectory(${CMAKE_SOURCE_DIR}/libs/SDL EXCLUDE_FROM_ALL)

add_subdirectory(${CMAKE_SOURCE_DIR}/src)
